--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -49,12 +49,21 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Http, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.7\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Http.WebHost, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.WebHost.5.2.7\lib\net45\System.Web.Http.WebHost.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -168,19 +177,59 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MovieController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002141224502_InitialModel.cs" />
+    <Compile Include="Migrations\202002141224502_InitialModel.Designer.cs">
+      <DependentUpon>202002141224502_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141230339_AddMovieAndCustomerTable.cs" />
+    <Compile Include="Migrations\202002141230339_AddMovieAndCustomerTable.Designer.cs">
+      <DependentUpon>202002141230339_AddMovieAndCustomerTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141414173_AddMembershipTypeTable.cs" />
+    <Compile Include="Migrations\202002141414173_AddMembershipTypeTable.Designer.cs">
+      <DependentUpon>202002141414173_AddMembershipTypeTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141421191_ModifyTypeOfMembershipTypeId.cs" />
+    <Compile Include="Migrations\202002141421191_ModifyTypeOfMembershipTypeId.Designer.cs">
+      <DependentUpon>202002141421191_ModifyTypeOfMembershipTypeId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141421490_SeedMembershipType.cs" />
+    <Compile Include="Migrations\202002141421490_SeedMembershipType.Designer.cs">
+      <DependentUpon>202002141421490_SeedMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141430367_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\202002141430367_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>202002141430367_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141452587_ModifyTypeMembershipTypeIdFromCustomer.cs" />
+    <Compile Include="Migrations\202002141452587_ModifyTypeMembershipTypeIdFromCustomer.Designer.cs">
+      <DependentUpon>202002141452587_ModifyTypeMembershipTypeIdFromCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141501127_SeedCustomer.cs" />
+    <Compile Include="Migrations\202002141501127_SeedCustomer.Designer.cs">
+      <DependentUpon>202002141501127_SeedCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202002141509436_AddBirthDateInCustomer.cs" />
+    <Compile Include="Migrations\202002141509436_AddBirthDateInCustomer.Designer.cs">
+      <DependentUpon>202002141509436_AddBirthDateInCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="ViewModels\RamdonMovieViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -241,6 +290,10 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
     <Content Include="Views\Movie\Ramdon.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Customer\Index.cshtml" />
+    <Content Include="Views\Customer\Detail.cshtml" />
+    <Content Include="Views\Customer\CustomerForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -257,6 +310,35 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202002141224502_InitialModel.resx">
+      <DependentUpon>202002141224502_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141230339_AddMovieAndCustomerTable.resx">
+      <DependentUpon>202002141230339_AddMovieAndCustomerTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141414173_AddMembershipTypeTable.resx">
+      <DependentUpon>202002141414173_AddMembershipTypeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141421191_ModifyTypeOfMembershipTypeId.resx">
+      <DependentUpon>202002141421191_ModifyTypeOfMembershipTypeId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141421490_SeedMembershipType.resx">
+      <DependentUpon>202002141421490_SeedMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141430367_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>202002141430367_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141452587_ModifyTypeMembershipTypeIdFromCustomer.resx">
+      <DependentUpon>202002141452587_ModifyTypeMembershipTypeIdFromCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141501127_SeedCustomer.resx">
+      <DependentUpon>202002141501127_SeedCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002141509436_AddBirthDateInCustomer.resx">
+      <DependentUpon>202002141509436_AddBirthDateInCustomer.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
